--- a/generalized_policy_iteration.ipynb
+++ b/generalized_policy_iteration.ipynb
@@ -106,6 +106,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluating both GPI methods over different MDPs \n",
+    "Over the next section we'll build some basic Markov Decision Processes and apply these two iterative methods to them. We can then compare runtime and convergence of the two. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
