Played around with Value iteration

--- a/generalized_policy_iteration.ipynb
+++ b/generalized_policy_iteration.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "    theta = 1e-4\n",
     "    V = [0 for i in range(len(states))] #initialize Value function\n",
     "    pi = [None for i in range(len(states))] \n",
-    "    max_iterations = 1e5\n",
+    "    max_iterations = 10000\n",
     "    for i in range(max_iterations): \n",
     "        optimal_policy = True \n",
     "        for j in range(max_iterations): \n",
@@ -39,7 +39,7 @@
     "                #calculate discounted return \n",
     "                for next_state in states: \n",
     "                    val+=reward_per_state[next_state]* transition_probabilities[state][next_state][pi[state]] * (gamma * V[next_state])\n",
-    "                max_diff = max(max_diff, abs(V[s]-val))\n",
+    "                max_diff = max(max_diff, abs(V[state]-val))\n",
     "                V[s] = val\n",
     "            if max_diff < theta: \n",
     "                break \n",
@@ -71,33 +71,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def value_iteration(action_space, states, reward_per_state, gamma, transition_probabilities): \n",
-    "    max_iterations = 1e5 \n",
+    "    max_iterations = 10000 \n",
     "    theta = 1e-4\n",
     "    V = [0 for i in range(len(states))] #initialize Value function\n",
     "    pi = [None for i in range(len(states))] #Initialize policy \n",
     "    \n",
     "    #run until change in value is smaller than theta or max iterations counted \n",
     "    for i in range(max_iterations): \n",
+    "        #print(i)\n",
     "        max_diff = 0 \n",
     "        V_new = [0 for i in range(len(states))]\n",
     "        for state in states: \n",
     "            max_val = 0 \n",
     "            for action in action_space: \n",
     "                val = reward_per_state[state] \n",
+    "                #print(val)\n",
     "                #calculate discounted return \n",
     "                for next_state in states: \n",
     "                    val+=reward_per_state[next_state]* transition_probabilities[state][next_state][action] * (gamma * V[next_state])\n",
+    "                print(va)\n",
     "                if val > max_val: \n",
     "                    max_val = val\n",
     "                #pick action that maximizes value \n",
     "                if V[state] < val: \n",
     "                    pi[state] = action_space[action]\n",
+    "                    V_new[state] = val\n",
+    "            \n",
     "            max_diff = max(max_diff, abs(V[state]-V_new[state]))\n",
+    "            print(V)\n",
     "        V = V_new \n",
     "        if max_diff < theta: \n",
     "            break \n",
@@ -115,11 +121,54 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "1. A boxing MDP. States are as follows: wide stanced (0), narrow stanced (1), reverse stanced (2)\n",
+    "Actions are: widen stance, narrow stance, switch stance, throw punch \n",
+    "when we widen our stance, we end up in wide stance (0), when we narrow we end up in narrow and when we reverse we end up in 2. When we throw a punch we can end up in a wide stance or a narrow stance with 50% probability. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0]\n",
+      "[0, 0, 0]\n",
+      "[0, 0, 0]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "([0, 0, 0], [3, 3, 3])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "states = [0, 1, 2]\n",
+    "actions = [0, 1, 2, 3]\n",
+    "\n",
+    "rewards = [2, 5, 2]\n",
+    "\n",
+    "transition_probs = [[[0.25,0.25,0.25,0.25], [0.25,0.25,0.25,0.25], [0.25,0.25,0.25,0.25]], \n",
+    "                    [[0.25,0.25,0.25,0.25], [0.25,0.25,0.25,0.25], [0.25,0.25,0.25,0.25]], \n",
+    "                    [[0.25,0.25,0.25,0.25], [0.25,0.25,0.25,0.25], [0.25,0.25,0.25,0.25]]]\n",
+    "\n",
+    "gamma = 0.9 \n",
+    "\n",
+    "value_iteration(action_space=actions, states=states, reward_per_state=rewards, gamma=gamma, transition_probabilities=transition_probs)"
+   ]
   }
  ],
  "metadata": {
@@ -138,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.1"
   },
   "orig_nbformat": 4
  },
