--- a/generalized_policy_iteration.ipynb
+++ b/generalized_policy_iteration.ipynb
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "def policy_iteration(states, action_space, reward_per_state, gamma, transition_probabilities): \n",
     "    theta = 1e-4\n",
     "    V = [0 for i in range(len(states))] #initialize Value function\n",
-    "    pi = [None for i in range(len(states))] \n",
+    "    pi = [0 for i in range(len(states))] \n",
     "    max_iterations = 10000\n",
     "    for i in range(max_iterations): \n",
     "        optimal_policy = True \n",
@@ -40,12 +40,12 @@
     "                for next_state in states: \n",
     "                    val+=reward_per_state[next_state]* transition_probabilities[state][next_state][pi[state]] * (gamma * V[next_state])\n",
     "                max_diff = max(max_diff, abs(V[state]-val))\n",
-    "                V[s] = val\n",
+    "                V[state] = val\n",
     "            if max_diff < theta: \n",
     "                break \n",
     "        \n",
     "        for state in states: \n",
-    "            current_value = V[s]\n",
+    "            current_value = V[state]\n",
     "            for action in action_space: \n",
     "                val = reward_per_state[state]\n",
     "                for next_state in states: \n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,18 +83,15 @@
     "    \n",
     "    #run until change in value is smaller than theta or max iterations counted \n",
     "    for i in range(max_iterations): \n",
-    "        #print(i)\n",
     "        max_diff = 0 \n",
     "        V_new = [0 for i in range(len(states))]\n",
     "        for state in states: \n",
     "            max_val = 0 \n",
     "            for action in action_space: \n",
     "                val = reward_per_state[state] \n",
-    "                #print(val)\n",
     "                #calculate discounted return \n",
     "                for next_state in states: \n",
     "                    val+=reward_per_state[next_state]* transition_probabilities[state][next_state][action] * (gamma * V[next_state])\n",
-    "                print(va)\n",
     "                if val > max_val: \n",
     "                    max_val = val\n",
     "                #pick action that maximizes value \n",
@@ -103,7 +100,6 @@
     "                    V_new[state] = val\n",
     "            \n",
     "            max_diff = max(max_diff, abs(V[state]-V_new[state]))\n",
-    "            print(V)\n",
     "        V = V_new \n",
     "        if max_diff < theta: \n",
     "            break \n",
@@ -131,26 +127,25 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: The above defined MDP does not make any real life sense, but was a quick experiment to come up with an MDP formulation to play around with. during the process of learning, I tweaked all of the numbers in the rewards and transition probability matrices below to see how the optimal policy selected evolves. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 0]\n",
-      "[0, 0, 0]\n",
-      "[0, 0, 0]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "([0, 0, 0], [3, 3, 3])"
+       "([2.9628315795262398e+224, 4.9380526325437324e+224, 0], [0, 0, 2])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,15 +154,35 @@
     "states = [0, 1, 2]\n",
     "actions = [0, 1, 2, 3]\n",
     "\n",
-    "rewards = [2, 5, 2]\n",
+    "rewards = [5, -5, -9]\n",
     "\n",
-    "transition_probs = [[[0.25,0.25,0.25,0.25], [0.25,0.25,0.25,0.25], [0.25,0.25,0.25,0.25]], \n",
-    "                    [[0.25,0.25,0.25,0.25], [0.25,0.25,0.25,0.25], [0.25,0.25,0.25,0.25]], \n",
-    "                    [[0.25,0.25,0.25,0.25], [0.25,0.25,0.25,0.25], [0.25,0.25,0.25,0.25]]]\n",
+    "transition_probs = [[[0.6, 0, 0, 0.4], [0, .8, 0.1,0.1], [0, 0, 1, 0]], \n",
+    "                    [[1, 0, 0, 0], [0, 0.7, 0, 0.3], [0, 0, 0.9, 0.1]], \n",
+    "                    [[0, 0, .8, 0], [0,0,1,0], [0, 0, 0,1]]]\n",
     "\n",
-    "gamma = 0.9 \n",
+    "gamma = 0.5 \n",
     "\n",
     "value_iteration(action_space=actions, states=states, reward_per_state=rewards, gamma=gamma, transition_probabilities=transition_probs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([nan, nan, nan], [0, 0, 0])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "policy_iteration(states, actions, rewards, gamma, transition_probs)"
    ]
   }
  ],
