Fixed bug, the MDP just does not make sense lol

--- a/generalized_policy_iteration.ipynb
+++ b/generalized_policy_iteration.ipynb
@@ -20,7 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,31 +40,37 @@
     "    max_iterations = 10000\n",
     "    for i in range(max_iterations): \n",
     "        optimal_policy = True \n",
+    "        #perform policy evaluation \n",
     "        for j in range(max_iterations): \n",
     "            max_diff = 0 \n",
     "            V_new = [0 for i in range(len(states))]\n",
     "            for state in states: \n",
     "                val = reward_per_state[state] \n",
+    "                reward_val = val\n",
     "                #calculate discounted return \n",
     "                for next_state in states: \n",
     "                    val+=reward_per_state[next_state]* transition_probabilities[state][next_state][pi[state]] * (gamma * V[next_state])\n",
     "                max_diff = max(max_diff, abs(V[state]-val))\n",
+    "                if np.isnan(val): \n",
+    "                    print(\"{}, {}, {},{}\".format(reward_val, reward_per_state[next_state], transition_probabilities[state][next_state][pi[state]], V[next_state]))\n",
     "                V[state] = val\n",
     "            if max_diff < theta: \n",
     "                break \n",
-    "        \n",
+    "        #perform policy improvement \n",
     "        for state in states: \n",
     "            current_value = V[state]\n",
     "            for action in action_space: \n",
     "                val = reward_per_state[state]\n",
     "                for next_state in states: \n",
     "                    val+=reward_per_state[next_state]* transition_probabilities[state][next_state][action] * (gamma * V[next_state])\n",
+    "                #print(val)\n",
     "                if val > current_value: \n",
     "                    pi[state] = action \n",
     "                    V[state] = val \n",
     "                    optimal_policy = False\n",
     "        if optimal_policy: \n",
     "            break \n",
+    "\n",
     "    return V, pi "
    ]
   },
@@ -71,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +160,7 @@
        "([2.9628315795262398e+224, 4.9380526325437324e+224, 0], [0, 0, 2])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,18 +182,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "([nan, nan, nan], [0, 0, 0])"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndexError",
+     "evalue": "Replacement index 4 out of range for positional args tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[57], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m policy_iteration(states, actions, rewards, gamma, transition_probs)\n",
+      "Cell \u001b[0;32mIn[54], line 20\u001b[0m, in \u001b[0;36mpolicy_iteration\u001b[0;34m(states, action_space, reward_per_state, gamma, transition_probabilities)\u001b[0m\n\u001b[1;32m     18\u001b[0m     max_diff \u001b[39m=\u001b[39m \u001b[39mmax\u001b[39m(max_diff, \u001b[39mabs\u001b[39m(V[state]\u001b[39m-\u001b[39mval))\n\u001b[1;32m     19\u001b[0m     \u001b[39mif\u001b[39;00m np\u001b[39m.\u001b[39misnan(val): \n\u001b[0;32m---> 20\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39;49m\u001b[39m{}\u001b[39;49;00m\u001b[39m, \u001b[39;49m\u001b[39m{}\u001b[39;49;00m\u001b[39m, \u001b[39;49m\u001b[39m{}\u001b[39;49;00m\u001b[39m,\u001b[39;49m\u001b[39m{}\u001b[39;49;00m\u001b[39m, \u001b[39;49m\u001b[39m{}\u001b[39;49;00m\u001b[39m\"\u001b[39;49m\u001b[39m.\u001b[39;49mformat(reward_val, reward_per_state[next_state], transition_probabilities[state][next_state][pi[state]], V[next_state]))\n\u001b[1;32m     21\u001b[0m     V[state] \u001b[39m=\u001b[39m val\n\u001b[1;32m     22\u001b[0m \u001b[39mif\u001b[39;00m max_diff \u001b[39m<\u001b[39m theta: \n",
+      "\u001b[0;31mIndexError\u001b[0m: Replacement index 4 out of range for positional args tuple"
+     ]
     }
    ],
    "source": [
@@ -188,9 +205,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml_accel",
    "language": "python",
-   "name": "python3"
+   "name": "ml_accel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -202,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
