--- a/montecarlo_methods.ipynb
+++ b/montecarlo_methods.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,8 +19,18 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Environment: OpenAI Taxi-v3\n",
+    "\n",
+    "For the purposes of this assignment, we use Taxi-v3 from OpenAI's Gym repository. This environment, its states, actions and goals are detailed on the following web page: https://www.gymlibrary.dev/environments/toy_text/taxi/ "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,36 +78,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/aryaman.pandya/ml_accel/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:233: DeprecationWarning: `np.bool8` is a deprecated alias for `np.bool_`.  (Deprecated NumPy 1.24)\n",
-      "  if not isinstance(terminated, (bool, np.bool8)):\n"
+      "-1, -1\n",
+      "-2, -1\n",
+      "-3, -1\n",
+      "-4, -1\n"
      ]
     }
    ],
    "source": [
     "Q = np.zeros((state_space.n, action_space.n))\n",
     "returns = [[[]]*action_space.n for i in range(state_space.n)]\n",
+    "\n",
     "for i in range(1, num_episodes+1):\n",
+    "    \n",
     "    episode = {}\n",
     "    state = env.reset()\n",
-    "    for time in range(10): \n",
+    "    cumulative_reward = 0 \n",
+    "    \n",
+    "    for time in range(100): \n",
+    "        \n",
     "        pi = policy_fn(Q, action_space.n, e, state)\n",
     "        action = np.random.choice(np.arange(action_space.n), p = pi)\n",
     "        next_state, reward, terminated, truncated, step_dict = env.step(action)\n",
+    "        cumulative_reward += reward\n",
+    "        \n",
+    "        if type(state)==tuple: \n",
+    "            state = state[0]\n",
+    "        \n",
     "        if (state, action) in episode.keys(): \n",
-    "            episode[(state, action)].append((reward, next_state))\n",
+    "            episode[(state, action)].append(reward)\n",
     "        else: \n",
-    "            episode[(state, action)] = [(reward,next_state)]\n",
-    "        #print(env.step(action))\n",
+    "            episode[(state, action)] = [reward]\n",
+    "        \n",
+    "        #print(episode[(state, action)])\n",
     "        if terminated: \n",
     "            break \n",
     "        state = next_state\n",
+    "        \n",
+    "    visited = []\n",
+    "    return_till_now = 0 \n",
+    "    for i, (state, action) in enumerate(episode): \n",
+    "        return_till_now += episode[(state, action)][0]\n",
+    "        print(\"{}, {}\".format(return_till_now, episode[(state, action)][0]))\n",
+    "        episode[(state, action)].pop(0)\n",
+    "        if (state, action) in visited: \n",
+    "            continue\n",
+    "    break\n",
+    "            \n",
+    "            \n",
+    "            \n",
     "    "
    ]
   }
