--- a/generalized_policy_iteration.ipynb
+++ b/generalized_policy_iteration.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,10 +49,10 @@
     "                reward_val = val\n",
     "                #calculate discounted return \n",
     "                for next_state in states: \n",
-    "                    val+=reward_per_state[next_state]* transition_probabilities[state][next_state][pi[state]] * (gamma * V[next_state])\n",
+    "                    val= reward_val + (reward_per_state[next_state]* transition_probabilities[state][next_state][pi[state]]) * (gamma * V[next_state])\n",
     "                max_diff = max(max_diff, abs(V[state]-val))\n",
     "                if np.isnan(val): \n",
-    "                    print(\"{}, {}, {},{}\".format(reward_val, reward_per_state[next_state], transition_probabilities[state][next_state][pi[state]], V[next_state]))\n",
+    "                    print(\"{}\".format(reward_val+ (reward_per_state[next_state] * transition_probabilities[state][next_state][pi[state]]) * (V[next_state])))\n",
     "                V[state] = val\n",
     "            if max_diff < theta: \n",
     "                break \n",
@@ -63,7 +63,6 @@
     "                val = reward_per_state[state]\n",
     "                for next_state in states: \n",
     "                    val+=reward_per_state[next_state]* transition_probabilities[state][next_state][action] * (gamma * V[next_state])\n",
-    "                #print(val)\n",
     "                if val > current_value: \n",
     "                    pi[state] = action \n",
     "                    V[state] = val \n",
@@ -86,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,16 +150,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "states = [0, 1, 2]\n",
+    "actions = [0, 1, 2, 3]\n",
+    "\n",
+    "rewards = [5, -5, -9]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([2.9628315795262398e+224, 4.9380526325437324e+224, 0], [0, 0, 2])"
+       "([2.9628315795262398e+224, 4.9380526325437324e+224, 4.9380526325437324e+224],\n",
+       " [0, 0, 0])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "transition_probs = [[[0.6, 0, 0, 0.4], [0, .8, 0.1,0.1], [0, 0, 1, 0]], \n",
+    "                    [[1, 0, 0, 0], [0, 0.7, 0, 0.3], [0, 0, 0.9, 0.1]], \n",
+    "                    [[1, 0, 0, 0], [0,0,1,0], [0, 0, 0,1]]]\n",
+    "\n",
+    "gamma = 0.5 \n",
+    "\n",
+    "value_iteration(action_space=actions, states=states, reward_per_state=rewards, gamma=gamma, transition_probabilities=transition_probs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([2.9628315795262398e+224, 4.9380526325437324e+224, 4.9380526325437324e+224],\n",
+       " [0, 0, 0])"
+      ]
+     },
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +213,7 @@
     "\n",
     "transition_probs = [[[0.6, 0, 0, 0.4], [0, .8, 0.1,0.1], [0, 0, 1, 0]], \n",
     "                    [[1, 0, 0, 0], [0, 0.7, 0, 0.3], [0, 0, 0.9, 0.1]], \n",
-    "                    [[0, 0, .8, 0], [0,0,1,0], [0, 0, 0,1]]]\n",
+    "                    [[1, 0, 0, 0], [0,0,1,0], [0, 0, 0,1]]]\n",
     "\n",
     "gamma = 0.5 \n",
     "\n",
@@ -182,20 +222,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "Replacement index 4 out of range for positional args tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[57], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m policy_iteration(states, actions, rewards, gamma, transition_probs)\n",
-      "Cell \u001b[0;32mIn[54], line 20\u001b[0m, in \u001b[0;36mpolicy_iteration\u001b[0;34m(states, action_space, reward_per_state, gamma, transition_probabilities)\u001b[0m\n\u001b[1;32m     18\u001b[0m     max_diff \u001b[39m=\u001b[39m \u001b[39mmax\u001b[39m(max_diff, \u001b[39mabs\u001b[39m(V[state]\u001b[39m-\u001b[39mval))\n\u001b[1;32m     19\u001b[0m     \u001b[39mif\u001b[39;00m np\u001b[39m.\u001b[39misnan(val): \n\u001b[0;32m---> 20\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39;49m\u001b[39m{}\u001b[39;49;00m\u001b[39m, \u001b[39;49m\u001b[39m{}\u001b[39;49;00m\u001b[39m, \u001b[39;49m\u001b[39m{}\u001b[39;49;00m\u001b[39m,\u001b[39;49m\u001b[39m{}\u001b[39;49;00m\u001b[39m, \u001b[39;49m\u001b[39m{}\u001b[39;49;00m\u001b[39m\"\u001b[39;49m\u001b[39m.\u001b[39;49mformat(reward_val, reward_per_state[next_state], transition_probabilities[state][next_state][pi[state]], V[next_state]))\n\u001b[1;32m     21\u001b[0m     V[state] \u001b[39m=\u001b[39m val\n\u001b[1;32m     22\u001b[0m \u001b[39mif\u001b[39;00m max_diff \u001b[39m<\u001b[39m theta: \n",
-      "\u001b[0;31mIndexError\u001b[0m: Replacement index 4 out of range for positional args tuple"
-     ]
+     "data": {
+      "text/plain": [
+       "([34.775000000000006, 81.93750000000001, 77.93750000000001], [3, 0, 0])"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
