modified:   montecarlo_methods.ipynb

--- a/montecarlo_methods.ipynb
+++ b/montecarlo_methods.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Monte Carlo Methods for prediction and control"
+    "# Monte Carlo Methods for prediction and control"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Environment: OpenAI Taxi-v3\n",
+    "### Environment: OpenAI Taxi-v3\n",
     "\n",
     "For the purposes of this assignment, we use Taxi-v3 from OpenAI's Gym repository. This environment, its states, actions and goals are detailed on the following web page: https://www.gymlibrary.dev/environments/toy_text/taxi/ "
    ]
@@ -47,6 +47,14 @@
     "action_space = env.action_space\n",
     "\n",
     "print(\"We have {} action space and {} state space\".format(action_space, state_space))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### On-policy Monte Carlo Control "
    ]
   },
   {
