On-policy MC Control complete

--- a/onpolicy_mc_control.ipynb
+++ b/onpolicy_mc_control.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,14 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#we select pi to be some arbitrary e soft stochastic policy \n",
     "def policy_fn(Q, num_actions, e, state):\n",
-    "    if type(state)==tuple: \n",
-    "        state = state[0]\n",
     "    action_probabilities = np.ones(num_actions) * (e/num_actions)\n",
     "    highest_action_value = np.argmax(Q[state])\n",
     "    action_probabilities[highest_action_value] += 1 - e\n",
@@ -76,73 +74,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_episodes = 1000\n",
-    "e = 0.01"
+    "num_episodes = 100\n",
+    "e = 0.1\n",
+    "gamma = 0.2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-1, -1\n",
-      "-2, -1\n",
-      "-3, -1\n",
-      "-4, -1\n"
+      "/home/aryaman.pandya/ml_accel/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:233: DeprecationWarning: `np.bool8` is a deprecated alias for `np.bool_`.  (Deprecated NumPy 1.24)\n",
+      "  if not isinstance(terminated, (bool, np.bool8)):\n"
      ]
     }
    ],
    "source": [
     "Q = np.zeros((state_space.n, action_space.n))\n",
     "returns = [[[]]*action_space.n for i in range(state_space.n)]\n",
+    "pi = np.zeros((state_space.n, action_space.n))\n",
     "\n",
     "for i in range(1, num_episodes+1):\n",
     "    \n",
-    "    episode = {}\n",
+    "    episode = []\n",
     "    state = env.reset()\n",
     "    cumulative_reward = 0 \n",
     "    \n",
-    "    for time in range(100): \n",
-    "        \n",
-    "        pi = policy_fn(Q, action_space.n, e, state)\n",
-    "        action = np.random.choice(np.arange(action_space.n), p = pi)\n",
-    "        next_state, reward, terminated, truncated, step_dict = env.step(action)\n",
-    "        cumulative_reward += reward\n",
+    "    for time in range(1000): \n",
     "        \n",
     "        if type(state)==tuple: \n",
     "            state = state[0]\n",
     "        \n",
-    "        if (state, action) in episode.keys(): \n",
-    "            episode[(state, action)].append(reward)\n",
-    "        else: \n",
-    "            episode[(state, action)] = [reward]\n",
+    "        pi[state] = policy_fn(Q, action_space.n, e, state)\n",
+    "        action = np.random.choice(np.arange(action_space.n), p = pi[state])\n",
+    "        next_state, reward, terminated, truncated, step_dict = env.step(action)\n",
+    "        \n",
+    "        episode.append((state, action, reward))\n",
     "        \n",
     "        #print(episode[(state, action)])\n",
     "        if terminated: \n",
     "            break \n",
     "        state = next_state\n",
     "        \n",
+    "        \n",
     "    visited = []\n",
     "    return_till_now = 0 \n",
-    "    for i, (state, action) in enumerate(episode): \n",
-    "        return_till_now += episode[(state, action)][0]\n",
-    "        print(\"{}, {}\".format(return_till_now, episode[(state, action)][0]))\n",
-    "        episode[(state, action)].pop(0)\n",
+    "    returns = {}\n",
+    "    states_in_episode = []\n",
+    "    for i, (state, action, reward) in enumerate(episode): \n",
+    "        if state not in states_in_episode: \n",
+    "            states_in_episode.append(state)\n",
     "        if (state, action) in visited: \n",
     "            continue\n",
-    "    break\n",
+    "        else: \n",
+    "            visited.append((state, action))\n",
+    "            G = sum([r*(gamma**j) for j, (s, a, r) in enumerate(episode)])\n",
+    "            if (state, action) in returns.keys(): \n",
+    "                returns[(state, action)].append(G)\n",
+    "            else: \n",
+    "                returns[(state, action)] = [G]\n",
+    "            Q[state][action] = sum(returns[(state, action)])/len(returns[(state, action)])\n",
     "            \n",
-    "            \n",
-    "            \n",
-    "    "
+    "    for state in states_in_episode: \n",
+    "        pi[state] = policy_fn(Q, action_space.n, e, state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.         0.         0.         0.         0.         0.        ]\n",
+      " [0.         0.         0.         0.         0.         0.        ]\n",
+      " [0.01666667 0.01666667 0.01666667 0.91666667 0.01666667 0.01666667]\n",
+      " ...\n",
+      " [0.91666667 0.01666667 0.01666667 0.01666667 0.01666667 0.01666667]\n",
+      " [0.01666667 0.01666667 0.91666667 0.01666667 0.01666667 0.01666667]\n",
+      " [0.91666667 0.01666667 0.01666667 0.01666667 0.01666667 0.01666667]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ],\n",
+       "       [-1.25, -1.25, -1.25,  0.  , -1.25,  0.  ],\n",
+       "       ...,\n",
+       "       [-1.61, -1.61, -1.61, -1.61, -1.61, -1.61],\n",
+       "       [-1.34, -1.34, -1.25, -1.25, -1.25, -1.25],\n",
+       "       [ 0.  ,  0.  ,  0.  , -1.25,  0.  ,  0.  ]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q"
    ]
   }
  ],
