--- a/onpolicy_mc_control.ipynb
+++ b/onpolicy_mc_control.ipynb
@@ -252,7 +252,7 @@
    "metadata": {},
    "source": [
     "### Notes \n",
-    "The findings here seem pretty simple- Getting a the epsilon greedy policy learned by the on-policy MC control algorithm is not good enough... failing for the algorithm to get us into a terminal state. This could be because of the size of the state-action space, and the difficulty to learn the objective. In the training steps, we quit iterating after a fixed number of steps. This means we aren't really encountering a terminal state ever, making it near impossible for the policy to be able to pick up on that. Temporal Difference learning should be slightly better at learning from incomplete episodes. "
+    "The findings here seem pretty simple- Vanilla average-based monte carlo control is not good enough... the number of states and actions make it hard for the agent to experience good behavior and reach a terminal state in a reasonable number of iterations. Temporal Difference learning should be slightly better at learning from incomplete episodes and will be the basis for the next exercise "
    ]
   }
  ],
