--- a/td_zero.ipynb
+++ b/td_zero.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Temporal Difference Learning "
+    "# On-policy Temporal Difference Learning (SARSA)"
    ]
   },
   {
@@ -127,7 +127,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode: 0 Epoch: 0\n"
+      "Episode: 0 Epoch: 0\n",
+      "Episode: 0 Epoch: 988\n",
+      "Episode: 1 Epoch: 0\n",
+      "Episode: 1 Epoch: 990\n",
+      "Episode: 2 Epoch: 0\n",
+      "Episode: 2 Epoch: 1199\n",
+      "Episode: 3 Epoch: 0\n",
+      "Episode: 3 Epoch: 767\n",
+      "Episode: 4 Epoch: 0\n",
+      "Episode: 4 Epoch: 1224\n",
+      "Episode: 5 Epoch: 0\n",
+      "Episode: 5 Epoch: 729\n",
+      "Episode: 6 Epoch: 0\n",
+      "Episode: 6 Epoch: 769\n",
+      "Episode: 7 Epoch: 0\n",
+      "Episode: 7 Epoch: 551\n",
+      "Episode: 8 Epoch: 0\n",
+      "Episode: 8 Epoch: 335\n",
+      "Episode: 9 Epoch: 0\n",
+      "Episode: 9 Epoch: 1130\n",
+      "Episode: 10 Epoch: 0\n",
+      "Episode: 10 Epoch: 917\n",
+      "Episode: 11 Epoch: 0\n",
+      "Episode: 11 Epoch: 363\n",
+      "Episode: 12 Epoch: 0\n",
+      "Episode: 12 Epoch: 972\n",
+      "Episode: 13 Epoch: 0\n",
+      "Episode: 13 Epoch: 720\n",
+      "Episode: 14 Epoch: 0\n",
+      "Episode: 14 Epoch: 440\n",
+      "Episode: 15 Epoch: 0\n",
+      "Episode: 15 Epoch: 1832\n",
+      "Episode: 16 Epoch: 0\n",
+      "Episode: 16 Epoch: 973\n",
+      "Episode: 17 Epoch: 0\n",
+      "Episode: 17 Epoch: 718\n",
+      "Episode: 18 Epoch: 0\n",
+      "Episode: 18 Epoch: 674\n",
+      "Episode: 19 Epoch: 0\n",
+      "Episode: 19 Epoch: 376\n",
+      "Episode: 20 Epoch: 0\n",
+      "Episode: 20 Epoch: 647\n",
+      "Episode: 21 Epoch: 0\n",
+      "Episode: 21 Epoch: 467\n",
+      "Episode: 22 Epoch: 0\n",
+      "Episode: 22 Epoch: 909\n",
+      "Episode: 23 Epoch: 0\n",
+      "Episode: 23 Epoch: 346\n",
+      "Episode: 24 Epoch: 0\n",
+      "Episode: 24 Epoch: 455\n",
+      "Episode: 25 Epoch: 0\n",
+      "Episode: 25 Epoch: 688\n",
+      "Episode: 26 Epoch: 0\n",
+      "Episode: 26 Epoch: 753\n",
+      "Episode: 27 Epoch: 0\n",
+      "Episode: 27 Epoch: 574\n",
+      "Episode: 28 Epoch: 0\n",
+      "Episode: 28 Epoch: 987\n",
+      "Episode: 29 Epoch: 0\n",
+      "Episode: 29 Epoch: 537\n",
+      "Episode: 30 Epoch: 0\n",
+      "Episode: 30 Epoch: 363\n",
+      "Episode: 31 Epoch: 0\n",
+      "Episode: 31 Epoch: 504\n",
+      "Episode: 32 Epoch: 0\n",
+      "Episode: 32 Epoch: 311\n",
+      "Episode: 33 Epoch: 0\n",
+      "Episode: 33 Epoch: 358\n",
+      "Episode: 34 Epoch: 0\n",
+      "Episode: 34 Epoch: 473\n",
+      "Episode: 35 Epoch: 0\n",
+      "Episode: 35 Epoch: 582\n",
+      "Episode: 36 Epoch: 0\n",
+      "Episode: 36 Epoch: 306\n",
+      "Episode: 37 Epoch: 0\n",
+      "Episode: 37 Epoch: 941\n",
+      "Episode: 38 Epoch: 0\n",
+      "Episode: 38 Epoch: 238\n",
+      "Episode: 39 Epoch: 0\n",
+      "Episode: 39 Epoch: 206\n",
+      "Episode: 40 Epoch: 0\n",
+      "Episode: 40 Epoch: 424\n",
+      "Episode: 41 Epoch: 0\n",
+      "Episode: 41 Epoch: 437\n",
+      "Episode: 42 Epoch: 0\n",
+      "Episode: 42 Epoch: 701\n",
+      "Episode: 43 Epoch: 0\n",
+      "Episode: 43 Epoch: 355\n",
+      "Episode: 44 Epoch: 0\n",
+      "Episode: 44 Epoch: 250\n",
+      "Episode: 45 Epoch: 0\n",
+      "Episode: 45 Epoch: 373\n",
+      "Episode: 46 Epoch: 0\n",
+      "Episode: 46 Epoch: 480\n",
+      "Episode: 47 Epoch: 0\n",
+      "Episode: 47 Epoch: 283\n",
+      "Episode: 48 Epoch: 0\n",
+      "Episode: 48 Epoch: 278\n",
+      "Episode: 49 Epoch: 0\n",
+      "Episode: 49 Epoch: 484\n",
+      "Episode: 50 Epoch: 0\n"
      ]
     }
    ],
