Reorganized directory structure

--- a/MonteCarloMethods/sarsa.ipynb
+++ b/MonteCarloMethods/sarsa.ipynb
@@ -150,7 +150,6 @@
     "        if terminated: \n",
     "            print(\"Episode: {} Epoch: {}\".format(i, epoch))\n",
     "            epochs_per_episode.append(epoch)\n",
-    "            break \n",
     "        \n",
     "        state = next_state"
    ]
@@ -197,6 +196,38 @@
     "### Results \n",
     "\n",
     "This algorithm allowed our agent to learn online, which allowed it to achieve a terminal state much faster than the average-based MC methods in the first few episodes. Over time the value function converged enough to have multiple episodes that terminated in less than 50 time steps. Throughout the learning process, the policy being used was a stochastic epsilon greedy one to allow for exploration. Below, we examine the behavior of a deterministic policy against our learned value function. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state_start = env.reset()\n",
+    "i = 0\n",
+    "e = 0.01 #make policy less exploratory while testing \n",
+    "env.reset()\n",
+    "env.render()\n",
+    "print('yes')\n",
+    "test_epochs_per_episode = []\n",
+    "for i in range(50): \n",
+    "    test_epochs = 0 \n",
+    "    while not terminated: \n",
+    "        test_epochs =+ 1 \n",
+    "        if type(state)==tuple: \n",
+    "            state = state[0]\n",
+    "        \n",
+    "        #time.sleep(0.03)\n",
+    "        pi[state] = policy_fn(Q, action_space.n, e, state)\n",
+    "        action = np.random.choice(np.arange(action_space.n), p = pi[state])\n",
+    "        print(state)\n",
+    "        next_state, reward, terminated, truncated, step_dict = env.step(action)\n",
+    "        \n",
+    "        if terminated: \n",
+    "            print(test_epochs)\n",
+    "            test_epochs_per_episode.append(test_epochs)\n",
+    "        state = next_state"
    ]
   }
  ],
