--- a/MonteCarloMethods/vanilla_monte_carlo.ipynb
+++ b/MonteCarloMethods/vanilla_monte_carlo.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Monte Carlo Methods for prediction and control"
+    "# Vanilla (average based) On-Policy Monte Carlo Control"
    ]
   },
   {
